<resources>
    <string name="app_name">Barcode Scanner</string>
    <string name="camera_permission_denied">You have denied access to the camera.\nYou must authorize it to scan a barcode.</string>
    <string name="close_dialog_label">Close</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="go_to_dialog_label">Enter website</string>
    <string name="error">Error</string>
    <string name="image_view_description_flag">Flag</string>
    <string name="image_view_description_logo">Logo</string>
    <string name="image_view_description_type_icon">Type</string>
    <string name="image_view_description_bar_code">Barcode</string>
    <string name="image_view_description_icon">Icon</string>
    <string name="image_view_description_product_front">Product picture</string>
    <string name="image_view_description_nutriscore">NUTRI-SCORE</string>
    <string name="image_view_description_nova_group">NOVA GROUP</string>
    <string name="image_view_description_eco_score">ECO SCORE</string>
    <string name="image_view_description_image">Image</string>
    <string name="slider_description_zoom">Zoom</string>
    <string name="title_scan">Scan</string>
    <string name="title_history">History</string>
    <string name="title_generate">Generate</string>
    <string name="title_settings">Settings</string>
    <string name="title_qr_code_creator">Generate a QR Code</string>
    <string name="title_bar_code_creator">Generate a barcode</string>
    <string name="create_qr_from_clipboard">Generate a QR Code from the clipboard</string>
    <string name="information_label">Information</string>
    <string name="barcode_label">Barcode</string>
    <string name="download_from_api_label">Download from APIs</string>
    <string name="menu_more">More</string>
    <string name="barcode_qr_code_label">QR Code</string>
    <string name="barcode_data_matrix_label">Data Matrix</string>
    <string name="barcode_pdf_417_label">PDF 417</string>
    <string name="barcode_aztec_label">AZTEC</string>
    <string name="barcode_ean_13_label">EAN 13</string>
    <string name="barcode_ean_8_label">EAN 8</string>
    <string name="barcode_upc_a_label">UPC A</string>
    <string name="barcode_upc_e_label">UPC E</string>
    <string name="barcode_code_128_label">Code 128</string>
    <string name="barcode_code_93_label">Code 93</string>
    <string name="barcode_code_39_label">Code 39</string>
    <string name="barcode_codabar_label">Codabar</string>
    <string name="barcode_itf_label">ITF</string>
    <string name="qr_code_type_name_text">Text</string>
    <string name="qr_code_type_name_web_site">Website</string>
    <string name="qr_code_type_name_contact">Contact</string>
    <string name="qr_code_type_name_epc">EPC QR Code</string>
    <string name="qr_code_type_name_mail">Mail</string>
    <string name="qr_code_type_name_sms">SMS</string>
    <string name="qr_code_type_name_phone">Phone number</string>
    <string name="qr_code_type_name_geographic_coordinates">Geographic coordinates</string>
    <string name="qr_code_type_name_agenda">Agenda</string>
    <string name="qr_code_type_name_wifi">Wi-Fi</string>
    <string name="qr_code_type_name_apps">Application</string>
    <string name="bar_code_type_unknown_product">Product</string>
    <string name="bar_code_type_food">Food Product</string>
    <string name="bar_code_type_pet_food">Pet Food</string>
    <string name="bar_code_type_beauty">Cosmetic Product</string>
    <string name="bar_code_type_music">Music</string>
    <string name="bar_code_type_unknown_music_album_title">Album title unknown</string>
    <string name="bar_code_type_book">Book</string>
    <string name="bar_code_type_unknown_book_title">Book title unknown</string>
    <string name="bar_code_type_industrial">Industrial Code</string>
    <string name="bar_code_type_unknown_matrix">Matrix Code</string>
    <string name="bar_code_type_name_unknown">Unknown</string>
    <string name="qr_code_error_correction_level_label">Error correction level</string>
    <string name="qr_code_error_correction_level_settings_label">Error correction level (QR Code)</string>
    <string name="qr_code_error_correction_level_name_low">Low (~7%)</string>
    <string name="qr_code_error_correction_level_name_medium">Medium (~15%)</string>
    <string name="qr_code_error_correction_level_name_quartile">Quartile (~25%)</string>
    <string name="qr_code_error_correction_level_name_high">High (~30%)</string>
    <string name="label_history_empty">No elements scanned…</string>
    <string name="snack_bar_message_item_deleted">The product \"%1$s\" has been deleted from history.</string>
    <string name="snack_bar_message_items_deleted">Items deleted from history.</string>
    <string name="popup_message_confirmation_delete_history">Delete all history?</string>
    <string name="popup_message_confirmation_delete_selected_items_history">Delete selected items?</string>
    <string name="menu_item_history_delete">Delete history</string>
    <string name="menu_item_history_delete_from_history">Delete from history</string>
    <string name="menu_item_history_removed_from_history">Removed from history!</string>
    <string name="menu_item_history_add_in_history">Add in the history</string>
    <string name="menu_item_history_added_in_history">Added in the history!</string>
    <string name="delete_label">Delete</string>
    <string name="cancel_label">Cancel</string>
    <string name="record_label">Save</string>
    <string name="export_label">Export</string>
    <string name="export_csv_label">Export as CSV</string>
    <string name="export_json_label">Export as JSON</string>
    <string name="import_json_label">Import (JSON)</string>
    <string name="snack_bar_message_file_export_success">File saved!</string>
    <string name="snack_bar_message_file_export_error">An error has occurred! File not saved.</string>
    <string name="snack_bar_message_file_import_success">File imported!</string>
    <string name="snack_bar_message_file_import_error">An error has occurred! File not imported.</string>
    <string name="scan_cancel_label">Scan cancelled!</string>
    <string name="scan_error_exception_label">An error occurred: %1$s</string>
    <string name="flash_label">Flash</string>
    <string name="scan_from_image_label">Image</string>
    <string name="intent_filter_scan_by_image">Scan image</string>
    <string name="scan_information_label">Aim at barcode to scan</string>
    <string name="barcode_not_found">Barcode not found</string>
    <string name="barcode_information_search_label">Searching…</string>
    <string name="scan_error_label">Error during scanning!</string>
    <string name="scan_error_short_information_label">An error occurred while searching for information!</string>
    <string name="barcode_scanned_label">%1$s scanned!</string>
    <string name="barcode_found_on_label">Found on %1$s!</string>
    <string name="barcode_not_found_on_api_label">No information found on %1$s.</string>
    <string name="no_internet_permission">You don\'t have permission to access the Internet.</string>
    <string name="about_barcode_information_label">Information on barcode</string>
    <string name="about_barcode_label">About barcode</string>
    <string name="about_barcode_format_label">Format: %1$s</string>
    <string name="about_barcode_content_label">Barcode: %1$s</string>
    <string name="about_barcode_origin_label">Origin: </string>
    <string name="product_search_label">Product search</string>
    <string name="no_product_found_label">No product has been found!</string>
    <string name="warning_label">Warning</string>
    <string name="scan_error_information_label">An error occurred while searching information on remote API… Please verify your internet connection and application\'s permissions! If problem persists, it should be a server problem.</string>
    <string name="scan_error_internet_information_label">No information on product retrieved cause you don\'t seem to be connected on the internet!</string>
    <string name="scan_error_message_label">Error message: </string>
    <string name="overview_tab_label">Overview</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="nutrition_facts_tab_label">Nutrition</string>
    <string name="quality_label">Product quality</string>
    <string name="nutriscore_entitled_label">Nutri-Score</string>
    <string name="nutriscore_description">Nutri-Score is a logo which inform on the nutritional quality of food with ratings from A to E. The score take into account nutrients, food <b>to promote</b> (fibers, proteins, fruits, vegetables, legumes, oilseed) and <b>to restrict</b> (energy, saturated fatty acids, sugars, salt).</string>
    <string name="nutriscore_description_a">Very good nutritional quality</string>
    <string name="nutriscore_description_b">Good nutritional quality</string>
    <string name="nutriscore_description_c">Average nutritional quality</string>
    <string name="nutriscore_description_d">Bad nutritional quality</string>
    <string name="nutriscore_description_e">Very bad nutritional quality</string>
    <string name="nutriscore_description_unknown">No Nutri-Score</string>
    <string name="nova_group_entitled_label">NOVA Group</string>
    <string name="nova_group_description">NOVA Group is a 4-groups classification to highlight level of processed food:\n1 - Non processed food or minimally processed food\n2 - Processed ingredients\n3 - Processed food\n4 - Ultra-processed food and drinks</string>
    <string name="nova_group_description_1">Non processed food or minimally processed food</string>
    <string name="nova_group_description_2">Processed ingredients</string>
    <string name="nova_group_description_3">Processed food</string>
    <string name="nova_group_description_4">Ultra-processed food and drinks</string>
    <string name="nova_group_description_unknown">No NOVA Group</string>
    <string name="eco_score_entitled_label">Eco-Score</string>
    <string name="eco_score_description">Eco-Score is built around similar model of Nutri-Score: it\'s a rating from A (very low impact) to E (very high impact).</string>
    <string name="eco_score_description_a">Very low environmental impact</string>
    <string name="eco_score_description_b">Low environmental impact</string>
    <string name="eco_score_description_c">Moderate environmental impact</string>
    <string name="eco_score_description_d">High environmental impact</string>
    <string name="eco_score_description_e">Very high environmental impact</string>
    <string name="eco_score_description_unknown">Unknown environmental impact</string>
    <string name="details_label">Details</string>
    <string name="ingredients_analysis_label">Analysis of ingredients</string>
    <string name="labels_label">Labels</string>
    <string name="origins_label">Ingredients origin</string>
    <string name="categories_label">Categories</string>
    <string name="packaging_label">Packaging</string>
    <string name="stores_label">Stores</string>
    <string name="countries_label">Country of sale</string>
    <string name="ingredients_no_information_found_label">No ingredient found for this product…</string>
    <string name="allergens_label">Allergens</string>
    <string name="traces_label">Traces</string>
    <string name="additives_label">Additives</string>
    <string name="veggie_label">Veggie</string>
    <string name="off_additive_info_label">Info</string>
    <string name="matrix_uri_url_label">URL</string>
    <string name="matrix_uri_malicious_label">URL may be malicious…</string>
    <string name="matrix_uri_payment_app_label">Opens in</string>
    <string name="dimensions_label">Dimensions</string>
    <string name="width_label">Width</string>
    <string name="height_label">Height</string>
    <string name="keep_proportions">Keep proportions</string>
    <string name="margins">Margins</string>
</resources>