<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.views.fragments.barcodeAnalysis.contents.BarcodeMatrixUriFragment">

    <!-- Url -->
    <com.atharok.barcodescanner.presentation.customView.BarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_uri_url_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/normal_margin"
        app:title_text="@string/matrix_uri_url_label" />

    <!--- Maybe Malicious -->
    <RelativeLayout
        android:id="@+id/fragment_barcode_matrix_uri_malicious_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_uri_url_layout">

        <ImageView
            android:id="@+id/fragment_barcode_matrix_uri_malicious_warning_icon_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_warning_24"
            android:contentDescription="@string/image_view_description_icon"
            app:tint="?android:textColorPrimary" />

        <TextView
            android:id="@+id/fragment_barcode_matrix_uri_malicious_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/fragment_barcode_matrix_uri_malicious_warning_icon_image_view"
            android:layout_marginStart="@dimen/normal_margin"
            android:text="@string/matrix_uri_malicious_label"
            style="@style/AppTheme.TextView.Appearance.Normal.Secondary" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragment_barcode_matrix_uri_parsed_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_uri_malicious_layout"/>

    <!-- WeChat / Alipay: hidden unless the URI is a payment-app code (empty contents = GONE) -->
    <com.atharok.barcodescanner.presentation.customView.BarcodeParsedView
        android:id="@+id/fragment_barcode_matrix_uri_payment_app_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/large_margin"
        android:layout_below="@id/fragment_barcode_matrix_uri_parsed_layout"
        app:title_text="@string/matrix_uri_payment_app_label" />

</RelativeLayout>