<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.views.fragments.main.MainCameraXScannerFragment">

    <TextView
        android:id="@+id/fragment_main_camera_x_scanner_camera_permission_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/camera_permission_denied"
        android:textAlignment="center"
        android:visibility="gone"
        style="@style/AppTheme.TextView.Appearance.Normal.Secondary" />

    <androidx.camera.view.PreviewView
        android:id="@+id/fragment_main_camera_x_scanner_preview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:visibility="gone" />

    <com.atharok.barcodescanner.presentation.customView.ScanOverlay
        android:id="@+id/fragment_main_camera_x_scanner_scan_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <com.google.android.material.slider.Slider
        android:id="@+id/fragment_main_camera_x_scanner_slider"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@dimen/large_margin"
        android:value="0.5"
        android:valueFrom="0.0"
        android:valueTo="1"
        app:labelBehavior="gone"
        android:contentDescription="@string/slider_description_zoom"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        android:layout_gravity="top|center_horizontal">

        <TextView
            android:id="@+id/fragment_main_camera_x_scanner_information_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_information_label"
            android:visibility="gone"
            android:textColor="@android:color/white"
            style="@style/AppTheme.TextView.Appearance.Normal.Primary" />
    </FrameLayout>

</FrameLayout>